@@ -1,73 +1,44 @@
 plugins {
-    id 'ca.coglinc.javacc' version '2.4.0'
-    id 'antlr'
+    id 'java-test-fixtures'
 }
 
-description "Core functionality (terms, rules, prover, ...) for deductive verification of Java programs"
+description = "Core functionality (terms, rules, prover, ...) for deductive verification of Java programs"
 
 configurations { antlr4 }
 
 dependencies {
     api project(':key.util')
     api project(':key.ncore')
-    //api group: group, name: 'recoderkey', version: '1.0'
-    api project(':recoder')
-    implementation group: 'net.java.dev.javacc', name: 'javacc', version: '4.0'
-    implementation group: 'org.antlr', name: 'antlr-runtime', version: '3.5.3'
-    implementation group: 'antlr', name: 'antlr', version: '2.7.7'
-
-    javacc group: 'net.java.dev.javacc', name: 'javacc', version: '4.0'
-    antlr group: 'org.antlr', name: 'antlr', version: '3.5.3'   // use ANTLR version 3
+    api project(':key.ncore.calculus')
 
     antlr4 "org.antlr:antlr4:4.13.2"
     api "org.antlr:antlr4-runtime:4.13.2"
-    //implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
+
+    api project(':key.util')
+
+    def JP_VERSION = "3.28.0-K13.5"
+    api "org.key-project.proofjava:javaparser-core:$JP_VERSION"
+    api "org.key-project.proofjava:javaparser-core-serialization:$JP_VERSION"
+    api "org.key-project.proofjava:javaparser-symbol-solver-core:$JP_VERSION"
+
+    testImplementation("com.google.truth:truth:1.4.5")
+    testImplementation(project(":key.core"))
+
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml
+    testImplementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.21.4'
+
+    // test fixtures
+    testFixturesApi(testFixtures(project(":key.util")))
 }
 
 // The target directory for JavaCC (parser generation)
-def javaCCOutputDir = file("${buildDir}/generated-src/javacc")
-def javaCCOutputDirMain = file("$javaCCOutputDir/main")
+//def javaCCOutputDir = layout.buildDirectory.dir("generated-src/javacc").getOrNull()
+//def javaCCOutputDirMain = file("$javaCCOutputDir/main")
 
-sourceSets.main.java.srcDirs(javaCCOutputDirMain, "$projectDir/build/generated-src/antlr4/main/")
+sourceSets.main.java.srcDirs("$projectDir/build/generated-src/antlr4/main/")
 
-// Generate code from ANTLR grammars.
-generateGrammarSource {
-    maxHeapSize = "64m"
-    arguments += ["-visitor", "-listener", "-long-messages"]
-}
 
-// Generate code from ANTLR grammars in testing.
-generateTestGrammarSource {
-    maxHeapSize = "64m"
-    arguments += ["-visitor", "-listener", "-long-messages"]
-}
-
-// Generate code from JavaCC grammars.
-compileJavacc {
-    outputDirectory = javaCCOutputDirMain
-    inputDirectory = file("src/main/javacc")
-    doLast {
-        // Some manual overwriting of Token files needed
-        copy {
-            from("src/main/javacc/de/uka/ilkd/key/parser/schemajava/Token.java")
-            into "$javaCCOutputDirMain/de/uka/ilkd/key/parser/schemajava/"
-        }
-        copy {
-            from("src/main/javacc/de/uka/ilkd/key/parser/proofjava/Token.java")
-            into "$javaCCOutputDirMain/de/uka/ilkd/key/parser/proofjava/"
-        }
-        copy {
-            from("src/main/javacc/de/uka/ilkd/key/parser/schemajava/JavaCharStream.java")
-            into "$javaCCOutputDirMain/de/uka/ilkd/key/parser/schemajava/"
-        }
-        copy {
-            from("src/main/javacc/de/uka/ilkd/key/parser/proofjava/JavaCharStream.java")
-            into "$javaCCOutputDirMain/de/uka/ilkd/key/parser/proofjava/"
-        }
-    }
-}
-
-task generateSMTListings {
+tasks.register('generateSMTListings') {
     def pack = "de/uka/ilkd/key/smt/newsmt2"
     def resourcesDir = "${project.projectDir}/src/main/resources"
     def outputDir = resourcesDir // in the future that should be "${project.buildDir}/resources/main"
@@ -92,7 +63,7 @@ task generateSMTListings {
     }
 }
 
-task generateSolverPropsList {
+tasks.register('generateSolverPropsList') {
     def pack = "de/uka/ilkd/key/smt/solvertypes"
     def resourcesDir = "${project.projectDir}/src/main/resources"
     def outputDir = resourcesDir // in the future that should be "${project.buildDir}/resources/main"
@@ -129,33 +100,24 @@ tasks.withType(Test) {
 }
 
 
-task testProveRules(type: Test) {
-    description 'Proves KeY taclet rules tagged as lemma'
-    group "verification"
+tasks.register('testProveRules', Test) {
+    description = 'Proves KeY taclet rules tagged as lemma'
+    group = "verification"
     filter { includeTestsMatching "ProveRulesTest" }
     //useJUnitPlatform() {includeTags "testProveRules"    }
 }
 
-task testRunAllFunProofs(type: Test) {
-    description 'Prove/reload all keyfiles tagged for regression testing'
-    group "verification"
+tasks.register('testRunAllFunProofs', Test) {
+    description = 'Prove/reload all keyfiles tagged for regression testing'
+    group = "verification"
     filter {
         includeTestsMatching "RunAllProofsFunctional"
     }
 }
 
-task testRunAllInfProofs(type: Test) {
-    description 'Prove/reload all keyfiles tagged for regression testing'
-    group "verification"
-    filter {
-        includeTestsMatching "RunAllProofsInfFlow"
-    }
-}
-
-
-task testProveSMTLemmas(type: Test) {
-    description 'Prove (or load proofs for) lemmas used in the SMT translation'
-    group "verification"
+tasks.register('testProveSMTLemmas', Test) {
+    description = 'Prove (or load proofs for) lemmas used in the SMT translation'
+    group = "verification"
     filter {
         includeTestsMatching "ProveSMTLemmasTest"
     }
@@ -163,9 +125,9 @@ task testProveSMTLemmas(type: Test) {
 
 // Run the tests for the new smt translation in strict mode
 // where "unknown" is less accepted
-task testStrictSMT(type: Test) {
-    description 'Run the tests for the new smt translation in strict mode'
-    group 'verification'
+tasks.register('testStrictSMT', Test) {
+    description = 'Run the tests for the new smt translation in strict mode'
+    group = 'verification'
     systemProperty("key.newsmt2.stricttests", "true")
     filter {
         includeTestsMatching "MasterHandlerTest"
@@ -173,7 +135,7 @@ task testStrictSMT(type: Test) {
 }
 
 //Generation of the three version files within the resources by executing `git'.
-task generateVersionFiles() {
+tasks.register('generateVersionFiles') {
     def outputFolder = file("build/resources/main/de/uka/ilkd/key/util")
     def sha1 = new File(outputFolder, "sha1")
     def branch = new File(outputFolder, "branch")
@@ -206,16 +168,17 @@ static def gitRevParse(String args) {
 processResources.dependsOn generateVersionFiles, generateSolverPropsList, generateSMTListings
 
 def antlr4OutputKey = "$projectDir/build/generated-src/antlr4/main/de/uka/ilkd/key/nparser"
-task runAntlr4Key(type: JavaExec) {
+tasks.register('runAntlr4Key', JavaExec) {
     //see incremental task api, prevents rerun if nothing has changed.
-    inputs.files "src/main/antlr4/KeYLexer.g4", "src/main/antlr4/KeYParser.g4"
+    inputs.files "src/main/antlr4/JavaKeYLexer.g4", "src/main/antlr4/JavaKeYParser.g4"
     outputs.dir antlr4OutputKey
     classpath = configurations.antlr4
     mainClass.set("org.antlr.v4.Tool")
     args = ["-visitor",
+            "-lib", "../key.ncore/src/main/antlr/",
             "-Xexact-output-dir", "-o", antlr4OutputKey,
             "-package", "de.uka.ilkd.key.nparser",
-            "src/main/antlr4/KeYLexer.g4", "src/main/antlr4/KeYParser.g4"]
+            "src/main/antlr4/JavaKeYLexer.g4", "src/main/antlr4/JavaKeYParser.g4"]
     doFirst {
         file(antlr4OutputKey).mkdirs()
         println("create $antlr4OutputKey")
@@ -223,7 +186,7 @@ task runAntlr4Key(type: JavaExec) {
 }
 compileJava.dependsOn runAntlr4Key
 
-task debugKeyLexer(type: JavaExec) {
+tasks.register('debugKeyLexer', JavaExec) {
     mainClass.set("de.uka.ilkd.key.nparser.DebugKeyLexer")
     classpath = sourceSets.main.runtimeClasspath
     standardInput = System.in
@@ -233,7 +196,7 @@ task debugKeyLexer(type: JavaExec) {
 processResources.dependsOn generateVersionFiles
 
 def antlr4OutputJml = "$projectDir/build/generated-src/antlr4/main/de/uka/ilkd/key/speclang/njml"
-task runAntlr4Jml(type: JavaExec) {
+tasks.register('runAntlr4Jml', JavaExec) {
     //see incremental task api, prevents rerun if nothing has changed.
     inputs.files "src/main/antlr4/JmlLexer.g4", "src/main/antlr4/JmlParser.g4"
     outputs.dir antlr4OutputJml
@@ -250,19 +213,44 @@ task runAntlr4Jml(type: JavaExec) {
 }
 compileJava.dependsOn runAntlr4Jml
 
-task debugJmlLexer(type: JavaExec) {
+tasks.register('debugJmlLexer', JavaExec) {
     mainClass.set("de.uka.ilkd.key.speclang.njml.DebugJmlLexer")
     classpath = sourceSets.main.runtimeClasspath
     standardInput = System.in
 }
 
-task ptest(type: Test) { group "verification" }
+tasks.register('ptest', Test) { group = "verification" }
 
-task generateRAPUnitTests(type: JavaExec) {
+def rapDir = layout.buildDirectory.dir("generated-src/rap/").getOrNull()
+
+tasks.register('generateRAPUnitTests', JavaExec) {
     classpath = sourceSets.test.runtimeClasspath
     mainClass.set("de.uka.ilkd.key.proof.runallproofs.GenerateUnitTests")
-    args("$buildDir/generated-src/rap/")
+    args(rapDir)
 }
-sourceSets.test.java.srcDirs("$buildDir/generated-src/rap/")
 
-sourcesJar.dependsOn(runAntlr4Jml, runAntlr4Key, compileJavacc, generateGrammarSource)
+tasks.register("testRAP", Test) {
+    description = "Testng the generated RAP unit tests"
+    group = "verification"
+    dependsOn('generateRAPUnitTests', 'testClasses')
+
+    forkEvery = 1
+    maxParallelForks = 2
+    useJUnitPlatform()
+    it.filter {
+        it.includeTestsMatching "de.uka.ilkd.key.proof.runallproofs.gen.*"
+    }
+    // set heap size for the test JVM(s)
+    minHeapSize = "1g"
+    maxHeapSize = "3g"
+
+    // set JVM arguments for the test JVM(s)
+    //jvmArgs('-XX:MaxPermSize=1g')
+    failFast=false
+    testLogging.showStandardStreams = false
+    testLogging.displayGranularity = 1
+}
+
+sourceSets.test.java.srcDirs(rapDir)
+
+sourcesJar.dependsOn(runAntlr4Jml, runAntlr4Key)
